kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopkaro   
  labels:
    name: shopkaro   
    environment: production
