kubernetes/09-shopkaro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopKaro-service
  namespace: shopkaro   
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: shopKaro
