kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopKaro-ingress
  namespace: shopKaro
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - shopKaro.letsdeployit.com
    secretName: shopKaro-tls-secret  # Cert-Manager will manage this
  rules:
  - host: shopKaro.letsdeployit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopKaro-service
            port:
              number: 80
